--- a/Level-1_Task-2_Portfolio/index.html
+++ b/Level-1_Task-2_Portfolio/index.html
@@ -32,7 +32,7 @@
              <div>and I am a passionate <br></div>
              <span id="element">Web Developer</span>
              <div class="buttons" >
-           <button class="Resume"> <a href="Vaishnavi_Resume.pdf" download>Download Resume</a></button>  
+           <button class="Resume"> <a href="Vaishnavi_Chopade_resume (2).pdf" download>Download Resume</a></button>  
              <button class="github" onclick="location.href='https://github.com/VaishnaviGChopade'">Visit Github</button>
              <div class="social">
                 <i class="bi bi-linkedin" onclick="location.href='https://www.linkedin.com/in/vaishnavi-chopade-3b8694265/'"></i>
